@@ -571,6 +571,38 @@ uint32_t jsfFindFile(JsfFileName name, JsfFileHeader *returnedHeader) {
   return a;
 }
 
+static uint32_t jsfBankFindFileFromAddr(uint32_t bankAddress, uint32_t bankEndAddress, uint32_t containsAddr, JsfFileHeader *returnedHeader) {
+  uint32_t addr = bankAddress;
+  JsfFileHeader header;
+  memset(&header,0,sizeof(JsfFileHeader));
+  if (jsfGetFileHeader(addr, &header, false)) do {
+    uint32_t endOfFile = addr + (uint32_t)sizeof(JsfFileHeader) + jsfGetFileSize(&header);
+    if ((header.name.firstChars != 0) && // not been replaced
+        (addr<=containsAddr && containsAddr<=endOfFile)) {
+      // Now load the whole header (with name) and check properly
+      jsfGetFileHeader(addr, &header, true);
+      if (returnedHeader)
+        *returnedHeader = header;
+      return addr+(uint32_t)sizeof(JsfFileHeader);
+    }
+  } while (jsfGetNextFileHeader(&addr, &header, GNFH_GET_ALL|GNFH_READ_ONLY_FILENAME_START)); // still only get first 4 chars of name
+  return 0;
+}
+
+uint32_t jsfFindFileFromAddr(uint32_t containsAddr, JsfFileHeader *returnedHeader) {
+  if (containsAddr>=JSF_START_ADDRESS && containsAddr<=JSF_END_ADDRESS) {
+    uint32_t a = jsfBankFindFileFromAddr(JSF_START_ADDRESS, JSF_END_ADDRESS, containsAddr, returnedHeader);
+    if (a) return a;
+  }
+#ifdef JSF_BANK2_START_ADDRESS
+  if (containsAddr>=JSF_BANK2_START_ADDRESS && containsAddr<=JSF_BANK2_END_ADDRESS) {
+    uint32_t a = jsfBankFindFileFromAddr(JSF_BANK2_START_ADDRESS, JSF_BANK2_END_ADDRESS, containsAddr, returnedHeader);
+    if (a) return a;
+  }
+#endif
+  return 0;
+}
+
 static void jsfBankDebugFiles(uint32_t addr) {
   uint32_t pageAddr = 0, pageLen = 0, pageEndAddr = 0;
 
@@ -698,25 +730,14 @@ JsVar *jsfReadFile(JsfFileName name, int offset, int length) {
   if (length<=0) return jsvNewFromEmptyString();
   // now increment address by offset
   addr += (uint32_t)offset;
+  return jsvAddressToVar(addr, (uint32_t)length);
+}
 
+JsVar* jsvAddressToVar(size_t addr, uint32_t length) {
+  if (length<=0) return jsvNewFromEmptyString();
   size_t mappedAddr = jshFlashGetMemMapAddress((size_t)addr);
 #ifdef SPIFLASH_BASE // if using SPI flash it can't be memory-mapped
   if (!mappedAddr) {
-    /*JsVar *v = jsvNewStringOfLength(length, NULL);
-    if (v) {
-      JsvStringIterator it;
-      jsvStringIteratorNew(&it, v, 0);
-      while (length && jsvStringIteratorHasChar(&it)) {
-        unsigned char *data;
-        unsigned int l = 0;
-        jsvStringIteratorGetPtrAndNext(&it, &data, &l);
-        jshFlashRead(data, addr, l);
-        addr += l;
-        length -= l;
-      }
-      jsvStringIteratorFree(&it);
-    }
-    return v;*/
     return jsvNewFlashString((char*)(size_t)addr, (size_t)length);
   }
 #endif
