@@ -53,6 +53,10 @@ uint32_t jsfGetFileSize(JsfFileHeader *header);
 JsfFileFlags jsfGetFileFlags(JsfFileHeader *header);
 /// Find a 'file' in the memory store. Return the address of data start (and header if returnedHeader!=0). Returns 0 if not found
 uint32_t jsfFindFile(JsfFileName name, JsfFileHeader *returnedHeader);
+/// Find a 'file' in the memory store that contains this address. Return the address of data start (and header if returnedHeader!=0). Returns 0 if not found
+uint32_t jsfFindFileFromAddr(uint32_t containsAddr, JsfFileHeader *returnedHeader);
+/// Given an address in memory (or flash) return the correct JsVar to access it
+JsVar* jsvAddressToVar(size_t addr, uint32_t length);
 /// Return the contents of a file as a memory mapped var
 JsVar *jsfReadFile(JsfFileName name, int offset, int length);
 /// Write a file. For simple stuff just leave offset and size as 0
