@@ -125,9 +125,11 @@ typedef struct JsLex
   JsVar *tokenValue; ///< JsVar containing the current token - used only for strings/regex
   unsigned char tokenl; ///< the current length of token
 
+#ifndef ESPR_NO_LINE_NUMBERS
   /** Amount we add to the line number when we're reporting to the user
    * 1-based, so 0 means NO LINE NUMBER KNOWN */
   uint16_t lineNumberOffset;
+#endif
 
   /* Where we get our data from...
    *
